# quick-pulse

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_change_memory_disk_to_bigint.py  003_add_saas_tables.py  004_metrics_optimizations.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/repositories/: alert_repo.py  audit_log_repo.py  billing_repo.py  container_event_repo.py  container_repo.py  host_repo.py  metrics_repo.py  organization_repo.py  stack_repo.py  user_repo.py
backend/app/schemas/: alert.py  auth.py  billing.py  container.py  dashboard.py  event.py  metrics.py  organization.py  stack.py  user.py
backend/app/tests/: conftest.py  test_alerts.py  test_audit.py  test_auth.py  test_containers.py  test_metrics.py
backend/app/utils/: deps.py  seed.py
backend/app/workers/: events_worker.py  heartbeat_worker.py  metrics_worker.py  pubsub_worker.py
backend/auth/: auth_test.go
backend/cmd/server/: main.go
backend/db/: db.go
backend/handlers/: alerts.go  auth.go  containers.go  dashboard.go  events.go  kubernetes.go  logs.go  metrics.go  stacks.go  utils.go  ws.go
backend/internal/auth/: auth.go
backend/logs/: types.go
backend/models/: models.go
backend/workers/: events.go  metrics.go
backend/ws/: manager.go
docs/: GUIDE.md  (+1 more)
(+179 files in other folders)
